[gd_scene format=3 uid="uid://ci0pn3ibkldj4"]

[ext_resource type="Script" uid="uid://c0anhnpff3rki" path="res://addons/godex-cli/scenes/fix_window.gd" id="1_7lprp"]

[sub_resource type="GDScriptSyntaxHighlighter" id="GDScriptSyntaxHighlighter_vvie6"]

[sub_resource type="GDScriptSyntaxHighlighter" id="GDScriptSyntaxHighlighter_7lprp"]

[node name="FixWindow" type="Window" unique_id=1548206130]
oversampling_override = 1.0
title = "Fix Popup"
initial_position = 4
size = Vector2i(1500, 700)
script = ExtResource("1_7lprp")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=77978762]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="explainer_label" type="RichTextLabel" parent="VBoxContainer" unique_id=527245696]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer" unique_id=1655010923]
layout_mode = 2
size_flags_vertical = 3
split_offsets = PackedInt32Array(-1)
split_offset = -1

[node name="old_script_edit" type="CodeEdit" parent="VBoxContainer/HSplitContainer" unique_id=1941106065]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_type = 1
syntax_highlighter = SubResource("GDScriptSyntaxHighlighter_vvie6")
highlight_all_occurrences = true
highlight_current_line = true
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="new_script_edit" type="CodeEdit" parent="VBoxContainer/HSplitContainer" unique_id=114591627]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
syntax_highlighter = SubResource("GDScriptSyntaxHighlighter_7lprp")
highlight_all_occurrences = true
highlight_current_line = true
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" unique_id=1936223138]
layout_mode = 2

[node name="cancel_button" type="Button" parent="VBoxContainer/HBoxContainer2" unique_id=744603533]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel (Esc)"

[node name="confirm_button" type="Button" parent="VBoxContainer/HBoxContainer2" unique_id=1098805684]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm (Shift+Esc)"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
